[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Shruthi K N <shruthikngowda@gmail.com>"]
description = ""
name = "seaborn-practice"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
seaborn = "^0.10.0"
[tool.poetry.dev-dependencies]
